# Anima-Engine

./: .gitignore  AnimaPrerequisites.h  CMakeLists.txt  extensions.cpp  sphere - opengl.c
Anima/: Anima.h  AnimaConsole.cpp  AnimaConsoleDesc.h  AnimaParameter.h  AnimaParameterInt32.h  AnimaPlugin.cpp  AnimaPlugin.h  AnimaPluginGroup.cpp  AnimaPluginGroup.h  AnimaPluginManager.cpp  AnimaPluginManager.h  AnimaPluginRoot.cpp  AnimaPluginRoot.h  AnimaSingleton.cpp  AnimaSingleton.h  AnimaTypes.h  Enums.h  Exception.h  Parameter.h  ParameterInt32.h  Platform.h  Plugin.h  PluginGroup.h  PluginManager.h  PluginRoot.h  StringUtf8.h  Types.h
Anima/Entity/: AnimaEntityKinematic.h  AnimaEntityManager.h
Anima/Graphics/: AnimaGraphicsAxesConvention2d.cpp  AnimaGraphicsCamera.h  AnimaGraphicsCamera2d.h  AnimaGraphicsColor.h  AnimaGraphicsColorBuffer.cpp  AnimaGraphicsColorBuffer.h  AnimaGraphicsColorBufferDesc.h  AnimaGraphicsColorStructure.h  AnimaGraphicsDeviceColorBuffer.h  AnimaGraphicsDeviceColorBufferDesc.h  AnimaGraphicsDeviceContext.h  AnimaGraphicsDeviceContextDesc.h  AnimaGraphicsDeviceDriver.cpp  AnimaGraphicsDeviceDriver.h  AnimaGraphicsDeviceFrameBuffer.h  AnimaGraphicsDeviceIndexBuffer.h  AnimaGraphicsDeviceIndexBufferFactory.h  AnimaGraphicsDeviceManager.cpp  AnimaGraphicsDeviceManager.h  AnimaGraphicsDevicePipeline.h  AnimaGraphicsDevicePipelineRasterizerState.h  AnimaGraphicsDevicePipelineStage.h  AnimaGraphicsDevicePixelBuffer.h  AnimaGraphicsDevicePixelBufferFactory.h  AnimaGraphicsDeviceStage.h  AnimaGraphicsDeviceStageClipping2d.h  AnimaGraphicsDeviceStageInput2D.h  AnimaGraphicsDeviceStagePixelOperations.h  AnimaGraphicsDeviceStageRasterizer.h  AnimaGraphicsDeviceStageTransformation2d.h  AnimaGraphicsDeviceSubpipeline.cpp  AnimaGraphicsDeviceSubpipeline.h  AnimaGraphicsDeviceSubpipeline2d.h  AnimaGraphicsDeviceTransformedColorBuffer.h  AnimaGraphicsDeviceTransformedPixelBuffer.h  AnimaGraphicsDeviceVertexBuffer.h  AnimaGraphicsDeviceVertexBufferFactory.h  AnimaGraphicsDrawingContext.h  AnimaGraphicsDrawingContextDesc.h  AnimaGraphicsEnums.h  (+100 more)
Anima/Gui/: AnimaGuiButton.cpp  AnimaGuiButton.h  AnimaGuiButtonDesc.h  AnimaGuiContainer.cpp  AnimaGuiEnums.h  AnimaGuiLayoutFactory.cpp  AnimaGuiManager.h  AnimaGuiWidget.h  AnimaGuiWidgetContentGeometry.cpp  AnimaGuiWidgetContentImage.h  AnimaGuiWidgetDesc.h  AnimaGuiWidgetFactory.h  AnimaGuiWidgetFactoryComponentButton.h
Anima/Input/: AnimaInputContext.cpp  AnimaInputContext.h  AnimaInputEnums.h  AnimaInputMouse.h
Anima/MVC/: AnimaMVCController.h  AnimaMVCControllerCommand.h  AnimaMVCControllerCommandEventLoop.h  AnimaMVCControllerCommandEventLoopFSMWin32.h  AnimaMVCControllerFSMState.h  AnimaMVCFrontController.cpp  AnimaMVCFrontController.h  AnimaMVCFrontControllerFSMOSX.h  AnimaMVCFrontControllerFSMState.h  AnimaMVCFrontControllerFSMWin32.cpp  AnimaMVCModel.h  AnimaMVCView.h
Anima/Math/: AnimaMath.h  AnimaMathAxisAlignedBox.h  AnimaMathMatrix3.h  AnimaMathMatrix4.h  AnimaMathPoint2.h  AnimaMathQuaternion.cpp  AnimaMathQuaternion.h  AnimaMathRectangle.h  AnimaMathTrigonometry.h  AnimaMathVector2.cpp  AnimaMathVector2.h  AnimaMathVector3.cpp  AnimaMathVector3.h  AnimaMathVector4.h  AxisAlignedBox.h  Math.cpp  Math.h  Matrix3.h  Matrix4.h  Point2.h  Quaternion.cpp  Quaternion.h  Rectangle.h  Trigonometry.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Anima/OS/: AnimaOSApplication.cpp  AnimaOSApplication.h  AnimaOSEvent.h  AnimaOSEventManager.h  AnimaOSEventQueue.cpp  AnimaOSEventQueue.h  AnimaOSKeyListener.h  AnimaOSManager.h  AnimaOSMutex.h  AnimaOSProcess.h  AnimaOSProcessManager.cpp  AnimaOSProcessManager.h  AnimaOSRenderingContext.h  AnimaOSTimer.h  AnimaOSTimerFactory.h  AnimaOSTimerListener.h  AnimaOSTimerManager.cpp  AnimaOSWindow.cpp  AnimaOSWindow.h  AnimaOSWindowDesc.h  AnimaOSWindowListener.h  AnimaOSWindowManager.cpp  AnimaOSWindowManager.h  Application.h  Enums.h  Event.h  EventManager.h  EventQueue.cpp  EventQueue.h  KeyListener.h  KeyTranslationListener.h  Manager.h  MouseListener.h  Mutex.h  Process.h  ProcessManager.cpp  ProcessManager.h  Thread.h  Timer.h  TimerFactory.h  (+11 more)
Anima/Physics/: AnimaPhysics2dBody.h  AnimaPhysics2dBodyDesc.h  AnimaPhysics2dBodyStatic.h  AnimaPhysics2dContactListener.h  AnimaPhysics2dEnums.h  AnimaPhysics2dMaterial.h  AnimaPhysics2dWorld.h  AnimaPhysicsCollisionShape.h  AnimaPhysicsIMovable.h  AnimaPhysicsIPushable.h  AnimaPhysicsManager.h
Anima/Scene/: AnimaSceneColorRGBA.h  AnimaSceneFactory.h  AnimaSceneIndexedTriangleSet.h  AnimaSceneLayer.h  AnimaSceneLayerSet.h  AnimaSceneLayout.h  AnimaSceneLayoutLayer.h  AnimaSceneNode.h  AnimaSceneObject2d.h  AnimaSceneOrthoViewpoint.h  AnimaSceneShape.h  AnimaSceneShapeNode.cpp  AnimaSceneViewpointNode.h
Anima/XML/: AnimaXmlDocument.h  AnimaXmlDocumentFactory.cpp  AnimaXmlDocumentFactoryRapidXml.cpp  AnimaXmlDocumentFactoryRapidXml.h  AnimaXmlDocumentRapidXml.cpp  AnimaXmlElement.h  AnimaXmlElementRapidXml.cpp  AnimaXmlElementRapidXml.h
Anima/include/: Anima.h  AnimaAIFSMMachine.h  AnimaAIFSMState.h  AnimaConsole.h  AnimaConsoleShell.h  AnimaEntityDynamic.h  AnimaEntityStatic.h  AnimaException.h  AnimaFramework.h  AnimaGraphicsCamera.h  AnimaGraphicsColor.h  AnimaGraphicsColorBuffer.h  AnimaGraphicsColorBufferDesc.h  AnimaGraphicsColorStructure.h  AnimaGraphicsDeviceColorBuffer.h  AnimaGraphicsDeviceColorBufferDesc.h  AnimaGraphicsDeviceContext.h  AnimaGraphicsDeviceContextAllegro.h  AnimaGraphicsDeviceContextAllegroDX9.h  AnimaGraphicsDeviceContextDesc.h  AnimaGraphicsDeviceContextGL.h  AnimaGraphicsDeviceContextOgre.h  AnimaGraphicsDeviceDriver.h  AnimaGraphicsDeviceDriverGL15.h  AnimaGraphicsDeviceFrameBuffer.h  AnimaGraphicsDeviceFrameBufferGL15.h  AnimaGraphicsDeviceFrameBufferGL21.h  AnimaGraphicsDeviceIndexBuffer.h  AnimaGraphicsDeviceIndexBufferFactory.h  AnimaGraphicsDeviceManager.h  AnimaGraphicsDeviceManagerGL15.h  (+203 more)
Direct3D9 TestBed/: AnimaPrerequisites.h  Vertices.cpp  Vertices_2008.sln  Vertices_2008.vcproj
OpenGL TestBed/: AnimaMathVector3.h  OpenGL Startup.vcproj  OpenGL TestBed.sln  Vertices.cpp
(+736 files in other folders)
